add options and cups as configuration

--- a/Test/PvPoke.UnitTest/PvPoke.UnitTest.csproj
+++ b/Test/PvPoke.UnitTest/PvPoke.UnitTest.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\..\Source\PvPoke\Data\cups.json" Link="Data\cups.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\..\Source\PvPoke\Data\options.json" Link="Data\options.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
@@ -14,6 +23,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Source\PvPoke\PvPoke.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
