fix bugs and add new reference PvPoke game master for comparison

--- a/Test/PvPoke.UnitTest/PvPoke.UnitTest.csproj
+++ b/Test/PvPoke.UnitTest/PvPoke.UnitTest.csproj
@@ -1,25 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="..\..\Source\PvPoke\Data\cups.json" Link="Data\cups.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\Source\PvPoke\Data\legacyMoves.json" Link="Data\legacyMoves.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\Source\PvPoke\Data\options.json" Link="Data\options.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\Source\PvPoke\Data\pvpokeGameMaster.json" Link="Data\pvpokeGameMaster.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
@@ -29,10 +14,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Source\PvPoke\PvPoke.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
